--- a/project/styles/header.css
+++ b/project/styles/header.css
@@ -1,7 +1,3 @@
-.serach{
-  display:block;
-  font-size:20px;
-}
 .header{
   height:55px;
   display: flex;
@@ -10,18 +6,84 @@
 }
 
 .left-section{
-  background-color: lightblue;
-  width:160px;
+  display:flex;
+  align-items: center;
 }
-
+.hamburger-menu{
+  margin-left:24px;
+  margin-right:24px;
+  height:24px;
+}
+.youtube-logo{
+  height:20px;
+}
 .middle-section{
-  background-color: lightpink;
   flex:1;
   margin-left:70px;
   margin-right:35px;
   max-width: 500px;
+  display:flex;
+  align-items: center;
+}
+.search{
+  flex:1;
+  height:36px;
+  padding-left:10px;
+  font-size:16px;
+  border-width:1px;
+  border-style:solid;
+  border-color: rgb(192,192,192);
+  border-radius:3px;
+  box-shadow:inset 1px 2px 3px rgba(0, 0, 0, 0.05);
+  width:0;
+}
+.search::placeholder{
+  font-family: Roboto, Arial;
+  font-size:15px;
+}
+.search-button{
+  height:40px;
+  width:66px;
+  background-color: rgb(244,244,244);
+  border-width:1px;
+  border-style:solid;
+  border-color:rgb(192,192,192);
+  margin-left:-1px;
+  margin-right:10px;
+}
+.search-icon{
+  height:25px;
+  margin-top:4px;
+}
+.voice-search-button{
+  height:40px;
+  width:40px;
+  border-radius:20px;
+  border:none;
+  background-color: rgb(245,245,245);
+}
+.voice-search-icon{
+  height:24px;
+  margin-top:4px;
 }
 .right-section{
-  background-color: lightblue;
-  width:200px;
+  width:180px;
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right:15px;
+  flex-shrink:0;
+}
+.upload-icon{
+  height:24px;
+} 
+.youtube-apps-icon{
+  height:24px;
+} 
+.notifications-icon{
+  height:24px;
+}
+.current-user-icon{
+  height:30px;
+  border-radius: 16px;
 }
