--- a/project/styles/video.css
+++ b/project/styles/video.css
@@ -1,7 +1,6 @@
 
 .thumbnail{
   width:100%;
-  margin-bottom: 10px;
 }
 
 .video-title{
@@ -22,6 +21,10 @@
   width:40px;
   border-radius: 100%;
 }
+.thumbnail-row{
+  margin-bottom: 10px;
+  position: relative;
+}
 .author, .stats{
   font-size:12px;
   color:rgb(96,96,96);
@@ -36,4 +39,20 @@
   grid-template-columns: 1fr 1fr 1fr;
   column-gap:15px;
   row-gap:40px;
+}
+
+.video-time{
+  font-family:Roboto,Arial;
+  font-size:12px;
+  font-weight: 500;
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  border-radius:2px;
+  background-color: black;
+  color:white;
+  position:absolute;
+  bottom:8px;
+  right:5px;
 }
