--- a/project/styles/sidebar.css
+++ b/project/styles/sidebar.css
@@ -2,7 +2,28 @@
   position:fixed;
   left:0px;
   bottom:0px;
-  top:60px;
+  top:55px;
   background-color: white;
-  width:72px;
+  width:76px;
+  z-index:200;
+  padding-top:5px;
+}
+.sidebar-link{
+  cursor: pointer;
+  display:flex;
+  flex-direction: column;
+  height:74px;
+  align-items: center;
+  justify-content: center;
+  font-family: Roboto, Arial;
+  font-size: 10px;
+}
+.sidebar-link:hover{
+  background-color: rgb(235,235,235);
+}
+.sidebar-link>img{
+  margin-bottom: 5px;
+  height: 25px;
+  width:25px;
+  object-fit: contain;
 }
