--- a/project/styles/header.css
+++ b/project/styles/header.css
@@ -39,9 +39,7 @@
   height:36px;
   padding-left:10px;
   font-size:16px;
-  border-width:1px;
-  border-style:solid;
-  border-color: rgb(192,192,192);
+  border: 1px solid rgb(192,192,192); 
   border-radius:3px;
   box-shadow:inset 1px 2px 3px rgba(0, 0, 0, 0.05);
   width:0;
@@ -59,11 +57,49 @@
   border-color:rgb(192,192,192);
   margin-left:-1px;
   margin-right:10px;
+  cursor: pointer;
+}
+.search-button, 
+.voice-search-button,
+.upload-icon-container,
+.youtube-apps-container,
+.notif-container{
+  position:relative;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.search-button .tooltip,
+.voice-search-button .tooltip,
+.upload-icon-container .tooltip,
+.youtube-apps-container .tooltip,
+.notif-container .tooltip{
+  position:absolute;
+  font-family: Roboto,Arial;
+  background-color: grey;
+  color:white;
+  padding-top:4px;
+  padding-bottom:4px;
+  padding-left:8px;
+  padding-right:8px;
+  border-radius: 2px;
+  font-size:12px;
+  bottom:-36px;
+  opacity:0;
+  transition:opacity 0.15s;
+  pointer-events: none;
+  white-space: nowrap;
+}
+.search-button:hover .tooltip,
+.voice-search-button:hover .tooltip,
+.upload-icon-container:hover .tooltip,
+.youtube-apps-container:hover .tooltip,
+.notif-container:hover .tooltip{
+  opacity:1;
 }
 .search-icon{
-  height:25px;
-  margin-top:4px;
-}
+  height:25px;}
 .voice-search-button{
   height:40px;
   width:40px;
@@ -73,7 +109,6 @@
 }
 .voice-search-icon{
   height:24px;
-  margin-top:4px;
 }
 .right-section{
   width:180px;
