--- a/project/styles/video.css
+++ b/project/styles/video.css
@@ -40,15 +40,22 @@
   column-gap:15px;
   row-gap:40px;
 }
+@media (max-width:750px) {
+  .video-container{
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media(min-width:1000px){
+  .video-container{
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
 
 .video-time{
   font-family:Roboto,Arial;
   font-size:12px;
   font-weight: 500;
-  padding-left: 4px;
-  padding-right: 4px;
-  padding-top: 4px;
-  padding-bottom: 4px;
+  padding: 4px ;
   border-radius:2px;
   background-color: black;
   color:white;
